--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.4"
+  },
+  "scripts": {
+    "build:css": "npx tailwindcss -i script.css -o output.css"
   }
 }
